--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -55,12 +55,11 @@ depgen:
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h ui.h z-textblock.h \
  ui-input.h cmd-core.h z-type.h cave.h list-square-flags.h \
- list-terrain-flags.h cmds.h dungeon.h game-event.h grafmode.h init.h \
- parser.h mon-util.h monster.h mon-constants.h list-mon-flags.h \
- mon-timed.h mon-blow-methods.h list-blow-methods.h mon-blow-effects.h \
- list-blow-effects.h list-mon-spells.h obj-ignore.h list-ignore-types.h \
- obj-tval.h list-tvals.h obj-ui.h obj-util.h player-timed.h \
- list-player-timed.h prefs.h project.h list-project-environs.h \
+ list-terrain-flags.h cmds.h dungeon.h game-event.h init.h parser.h \
+ monster.h mon-constants.h list-mon-flags.h mon-timed.h \
+ mon-blow-methods.h list-blow-methods.h mon-blow-effects.h \
+ list-blow-effects.h list-mon-spells.h obj-util.h player-timed.h \
+ list-player-timed.h project.h list-project-environs.h \
  list-project-monsters.h tables.h trap.h list-trap-flags.h
 ./cmd-cave.o: cmd-cave.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h z-term.h ui-event.h z-msg.h z-msg-list.h \
@@ -921,11 +920,9 @@ depgen:
  list-blow-methods.h mon-blow-effects.h list-blow-effects.h \
  list-mon-spells.h history.h init.h parser.h mon-lore.h mon-make.h \
  mon-util.h obj-chest.h obj-desc.h obj-gear.h list-equip-slots.h \
- obj-identify.h obj-ignore.h list-ignore-types.h obj-make.h obj-slays.h \
- obj-tval.h list-tvals.h obj-ui.h obj-util.h player-timed.h \
- list-player-timed.h player-util.h project.h list-project-environs.h \
- list-project-monsters.h spells.h tables.h target.h trap.h \
- list-trap-flags.h
+ obj-identify.h obj-ignore.h list-ignore-types.h obj-make.h obj-tval.h \
+ list-tvals.h obj-ui.h obj-util.h player-timed.h list-player-timed.h \
+ player-util.h spells.h tables.h trap.h list-trap-flags.h
 ./store.o: store.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h z-term.h ui-event.h z-msg.h z-msg-list.h \
  config.h option.h z-file.h list-options.h player.h guid.h \
@@ -1042,6 +1039,20 @@ depgen:
  obj-identify.h obj-ignore.h list-ignore-types.h obj-info.h obj-make.h \
  obj-tval.h list-tvals.h obj-util.h score.h store.h tables.h target.h \
  ui-menu.h ui-options.h grafmode.h wizard.h
+./ui-map.o: ui-map.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
+ z-color.h z-util.h z-rand.h z-term.h ui-event.h z-msg.h z-msg-list.h \
+ config.h option.h z-file.h list-options.h player.h guid.h \
+ obj-properties.h list-stats.h list-object-flags.h list-kind-flags.h \
+ list-object-modifiers.h object.h z-quark.h z-dice.h z-expression.h \
+ effects.h list-effects.h list-elements.h list-identify-flags.h \
+ list-origins.h player-calcs.h list-player-flags.h ui.h z-textblock.h \
+ ui-input.h cmd-core.h z-type.h cave.h list-square-flags.h \
+ list-terrain-flags.h grafmode.h init.h parser.h mon-util.h monster.h \
+ mon-constants.h list-mon-flags.h mon-timed.h mon-blow-methods.h \
+ list-blow-methods.h mon-blow-effects.h list-blow-effects.h \
+ list-mon-spells.h obj-ignore.h list-ignore-types.h obj-tval.h \
+ list-tvals.h obj-ui.h obj-util.h player-timed.h list-player-timed.h \
+ prefs.h trap.h list-trap-flags.h
 ./ui-menu.o: ui-menu.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h z-term.h ui-event.h z-msg.h z-msg-list.h \
  config.h option.h z-file.h list-options.h player.h guid.h \
