--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -95,7 +95,6 @@ ANGFILES = \
 	cmd-obj.o \
 	cmd-pickup.o \
 	cmd-process.o \
-	death.o \
 	debug.o \
 	dungeon.o \
 	effects.o \
@@ -170,6 +169,7 @@ ANGFILES = \
 	trap.o \
 	ui.o \
 	ui-birth.o \
+	ui-death.o \
 	ui-event.o \
 	ui-game.o \
 	ui-help.o \
