--- a/mk/extra.mk.in
+++ b/mk/extra.mk.in
@@ -60,3 +60,4 @@ VERSION ?= @VERSION@
 MAINFILES = @MAINFILES@
 USE_STATS = @USE_STATS@
 DISTCLEAN = doc/manual/manual.pdf
+HAVE_RST2HTML ?= @RST2HTML@
