Fix #1831: Check for rst2latex and pdflatex and make the relevant bits of the manual fail to build cleanly if they are missing

--- a/configure.ac
+++ b/configure.ac
@@ -74,6 +74,11 @@ AC_CHECK_TOOL(RC, windres, no)
 AC_ARG_VAR([RST2HTML], [command for converting reStructuredText to HTML])
 AC_CHECK_PROGS([RST2HTML], [rst2html.py rst2html], [NOTFOUND])
 AC_SUBST(RST2HTML)
+AC_ARG_VAR([RST2LATEX], [command for converting reStructuredText to LaTeX])
+AC_CHECK_PROGS([RST2LATEX], [rst2latex.py rst2latex], [NOTFOUND])
+AC_SUBST(RST2LATEX)
+AC_CHECK_PROGS([PDFLATEX], [pdflatex], [NOTFOUND])
+AC_SUBST(PDFLATEX)
 
 AC_PATH_PROG(RM, rm)
 AC_PATH_PROG(MV, mv)
