--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,9 +3,6 @@ include $(MKPATH)buildsys.mk
 
 HELPSRCPATH := ../lib/help/
 
-RST2HTML := rst2html
-RST2LATEX := rst2latex
-PDFLATEX := pdflatex
 MAKEINDEX := makeindex
 
 DOC = manual.html manual.pdf
@@ -27,7 +24,7 @@ RSTINDEX := $(addprefix $(HELPSRCPATH), $(RSTINDEXWITHOUTPATH))
 STY := $(addprefix $(HELPSRCPATH), angband.sty)
 CSS := $(addprefix $(HELPSRCPATH), angband.css)
 
-ifneq ($(HAVE_RST2HTML),NOTFOUND)
+ifneq ($(RST2HTML),NOTFOUND)
 manual.html: $(RSTINDEX) $(RSTFILES) $(CSS)
 	${COMPILE_STATUS}
 	@if $(RST2HTML) $(HELPSRCPATH)/index.txt --stylesheet-path $(CSS) > manual.html; then \
@@ -40,6 +37,7 @@ manual.html:
 	echo rst2html not found. Cannot build HTML manual
 endif
 
+ifneq ($(RST2LATEX),NOTFOUND)
 manual.tex: $(RSTINDEX) $(RSTFILES) $(STY)
 	${COMPILE_STATUS}
 	@if $(RST2LATEX) $(HELPSRCPATH)/index.txt > manual.tex --stylesheet-path=$(STY) --documentclass=scrartcl; then \
@@ -48,6 +46,7 @@ manual.tex: $(RSTINDEX) $(RSTFILES) $(STY)
 		${COMPILE_FAILED}; \
 	fi
 
+ifneq ($(PDFLATEX),NOTFOUND)
 manual.pdf: manual.tex
 	${COMPILE_STATUS}
 	@$(PDFLATEX) manual.tex > /dev/null
@@ -57,5 +56,13 @@ manual.pdf: manual.tex
 	else \
 		${COMPILE_FAILED}; \
 	fi
+else
+manual.pdf: manual.tex
+	echo pdflatex not found. Cannot build PDF manual
+endif
+else
+manual.pdf:
+	echo rst2latex not found. Cannot build PDF manual
+endif
 
 install: manual.html
