--- a/lib/edit/Makefile
+++ b/lib/edit/Makefile
@@ -5,5 +5,5 @@ CONFIG = activation.txt artifact.txt body.txt class.txt constants.txt \
  dungeon_profile.txt ego_item.txt flavor.txt history.txt monster.txt \
  monster_base.txt monster_spell.txt names.txt object.txt object_base.txt \
  p_race.txt store.txt  terrain.txt vault.txt hints.txt pain.txt pit.txt \
- room_template.txt trap.txt
+ quest.txt room_template.txt trap.txt
 PACKAGE = edit
